# SHIELD

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_exe.cmd  build_exe_gui.cmd  run_demo.cmd
src/shield/: __main__.py  app.py
src/shield/app/: gui.py
src/shield/core/: __init__.py  state.py
src/shield/demo/: __init__.py  export.py  export_bands.py  scenarios.py
src/shield/engine/: simulate.py
src/shield/evaluation/: baselines.py  runner.py  runner.py.bak  runner.py.bak2
src/shield/models/: __init__.py  indoor_sources.py  pm_mass_balance.bak.py  pm_mass_balance.py  thermal_2r2c.py
src/shield/optimizer/: robust_greedy.py
src/shield/policies/: heuristic.py
src/shield/reporting/: html_report.py
src/shield/uq/: ensemble.py  priors.py
tests/: test_baselines.py  test_demo_runs.py  test_engine_policy_robust.py  test_engine_simulate.py  test_ensemble_reproducible.py  test_eval_runner.py  test_hepa_budget_stamp.py  test_import.py  test_internal_gains_schedule.py  test_optimizer_robust_greedy.py  test_packages.py  test_pm_mass_balance.py  test_robust_mode_v2_guards.py  test_thermal_2r2c.py  test_windows_open_effect.py
tools/: compare_plans.py  print_forcing_window.py  print_plan_window.py  run_eval_matrix.py  run_eval_sweep.py  summarize_matrix.py
